<resources>
    <string name="app_name">DreemTest</string>
    <string name="dashboard_title">Dashboard</string>
    <string name="card_night_date_format">EEE, MMM d</string>
    <string name="card_night_score">Score: %d</string>
    <string name="night_date_format">EEE, MMM d</string>
    <string name="night_time_format">HH:mm</string>
    <string name="night_bedtime">Bedtime</string>
    <string name="night_wakeup_time">Wake-up</string>
    <string name="night_falling_asleep">Fall asleep</string>
    <string name="night_awake_time">Awake</string>
    <string name="night_quality">Quality</string>
    <string name="sleep_stage_wake">Wake</string>
    <string name="sleep_stage_light">Light</string>
    <string name="sleep_stage_deep">Deep</string>
    <string name="sleep_stage_rem">REM</string>
    <string name="sleep_stage_unknown">Off</string>
    <string name="night_onset_duration">Onset duration</string>
    <string name="night_moves">Moves</string>
    <string name="night_sleep_duration">Sleep duration</string>
</resources>