<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:binding="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".dashboard.night.NightFragment">

    <data>

        <import type="com.vincent.dreemtest.common.ext.StringsKt" />

        <variable
            name="viewModel"
            type="com.vincent.dreemtest.dashboard.night.NightViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_3"
            android:textAppearance="@style/TextAppearance.Headline5"
            android:textColor="@color/onBackground500"
            app:layout_constraintBottom_toBottomOf="@id/buttonClose"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/buttonClose"
            binding:date="@{viewModel.date}"
            binding:format="@{@string/night_date_format}"
            tools:text="Thu, Apr 29" />

        <ImageButton
            android:id="@+id/buttonClose"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginTop="@dimen/space_3"
            android:layout_marginEnd="@dimen/space_3"
            android:background="@null"
            android:onClick="@{() -> viewModel.close()}"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_round_cancel_24"
            android:tint="@color/onBackground500"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutMetrics"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/space_3"
            android:background="@color/surface500"
            android:paddingHorizontal="@dimen/space_3"
            app:layout_constraintBottom_toTopOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/buttonClose">

            <TextView
                android:id="@+id/textBedtime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_2"
                android:text="@string/night_bedtime"
                android:textAppearance="@style/TextAppearance.Body"
                android:textColor="@color/onSurface500"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textBedtimeValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.Headline6"
                android:textColor="@color/primary500"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textBedtime"
                binding:format="@{@string/night_time_format}"
                binding:time="@{viewModel.bedtime}"
                tools:text="23:17" />

            <TextView
                android:id="@+id/textWakeupTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_2"
                android:text="@string/night_wakeup_time"
                android:textAppearance="@style/TextAppearance.Body"
                android:textColor="@color/onSurface500"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textWakeupTimeValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.Headline6"
                android:textColor="@color/primary500"
                app:layout_constraintEnd_toEndOf="@id/textWakeupTime"
                app:layout_constraintTop_toBottomOf="@id/textWakeupTime"
                binding:format="@{@string/night_time_format}"
                binding:time="@{viewModel.wakeUpTime}"
                tools:text="7:30" />

            <TextView
                android:id="@+id/textFallingAsleep"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_2"
                android:text="@string/night_falling_asleep"
                android:textAppearance="@style/TextAppearance.Body"
                android:textColor="@color/onSurface500"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textBedtimeValue" />

            <TextView
                android:id="@+id/textFallingAsleepValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.Headline6"
                android:textColor="@color/primary500"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textFallingAsleep"
                binding:format="@{@string/night_time_format}"
                binding:time="@{viewModel.fallAsleepTime}"
                tools:text="23:52" />

            <TextView
                android:id="@+id/textAwakeTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_2"
                android:text="@string/night_awake_time"
                android:textAppearance="@style/TextAppearance.Body"
                android:textColor="@color/onSurface500"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textWakeupTimeValue" />

            <TextView
                android:id="@+id/textAwakeTimeValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.Headline6"
                android:textColor="@color/primary500"
                app:layout_constraintEnd_toEndOf="@id/textAwakeTime"
                app:layout_constraintTop_toBottomOf="@id/textAwakeTime"
                binding:format="@{@string/night_time_format}"
                binding:time="@{viewModel.awakeTime}"
                tools:text="7:30" />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/space_2"
                android:background="@color/onSurface100"
                app:layout_constraintTop_toBottomOf="@id/textFallingAsleepValue" />

            <TextView
                android:id="@+id/textQuality"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_2"
                android:text="@string/night_quality"
                android:textAppearance="@style/TextAppearance.Body"
                android:textColor="@color/onSurface500"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/divider" />

            <com.vincent.dreemtest.common.component.QualityView
                android:id="@+id/quality"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintHeight_max="140dp"
                android:layout_marginTop="@dimen/space_2"
                android:layout_marginBottom="@dimen/space_2"
                app:layout_constraintBottom_toTopOf="@+id/textOnsetDuration"
                app:layout_constraintDimensionRatio="1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textQuality"
                binding:percentage="@{viewModel.quality}" />

            <TextView
                android:id="@+id/textOnsetDuration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_2"
                android:text="@string/night_onset_duration"
                android:textAppearance="@style/TextAppearance.Body"
                android:textColor="@color/onSurface500"
                app:layout_constraintBottom_toTopOf="@+id/textOnsetDurationValue"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textOnsetDurationValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/space_2"
                android:textAppearance="@style/TextAppearance.Headline6"
                android:textColor="@color/primary500"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@id/textOnsetDuration"
                binding:format="@{@string/night_time_format}"
                binding:time="@{viewModel.onsetDuration}"
                tools:text="04:34" />

            <TextView
                android:id="@+id/textMoves"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_2"
                android:text="@string/night_moves"
                android:textAppearance="@style/TextAppearance.Body"
                android:textColor="@color/onSurface500"
                app:layout_constraintBottom_toTopOf="@+id/textMovesValue"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/textMovesValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/space_2"
                android:textAppearance="@style/TextAppearance.Headline6"
                android:textColor="@color/primary500"
                android:text="@{String.valueOf(viewModel.numberOfMoves)}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/textMoves"
                tools:text="7" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.65"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <com.vincent.dreemtest.common.component.HypnogramChartView
            android:id="@+id/chart"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/space_3"
            app:layout_constraintBottom_toTopOf="@id/textStageWake"
            app:layout_constraintTop_toBottomOf="@id/guideline"
            binding:data="@{viewModel.hypnogram}" />

        <TextView
            android:id="@+id/textStageWake"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_3"
            android:layout_marginBottom="@dimen/space_3"
            android:drawableBottom="@drawable/ic_circle_10dp"
            android:drawablePadding="@dimen/space_1"
            android:drawableTint="@color/sleep_stage_wake"
            android:text="@string/sleep_stage_wake"
            android:textAppearance="@style/TextAppearance.Body"
            android:textColor="@color/onBackground500"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/textStageLight"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textStageLight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/space_3"
            android:drawableBottom="@drawable/ic_circle_10dp"
            android:drawablePadding="@dimen/space_1"
            android:drawableTint="@color/sleep_stage_light"
            android:text="@string/sleep_stage_light"
            android:textAppearance="@style/TextAppearance.Body"
            android:textColor="@color/onBackground500"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/textStageDeep"
            app:layout_constraintStart_toEndOf="@id/textStageWake" />

        <TextView
            android:id="@+id/textStageDeep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/space_3"
            android:drawableBottom="@drawable/ic_circle_10dp"
            android:drawablePadding="@dimen/space_1"
            android:drawableTint="@color/sleep_stage_deep"
            android:text="@string/sleep_stage_deep"
            android:textAppearance="@style/TextAppearance.Body"
            android:textColor="@color/onBackground500"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/textStageRem"
            app:layout_constraintStart_toEndOf="@id/textStageLight" />

        <TextView
            android:id="@+id/textStageRem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/space_3"
            android:layout_marginBottom="@dimen/space_3"
            android:drawableBottom="@drawable/ic_circle_10dp"
            android:drawablePadding="@dimen/space_1"

            android:drawableTint="@color/sleep_stage_rem"
            android:text="@string/sleep_stage_rem"
            android:textAppearance="@style/TextAppearance.Body"
            android:textColor="@color/onBackground500"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/textStageDeep" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>